# park-api-v3

./: .dockerignore  .flaskenv  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.dev  Dockerfile.prod  LICENCE.txt  Makefile  README.md  config_dist_dev.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-celery-dev.py  run-celery-heartbeat-dev.py  run-flask-dev.py  run_celery_dev.py
.github/workflows/: build-publish.yml  lint-test.yml  lint.yml
dev/: provision_with_test_data.py
dev/api_tests/: http-client.env.json.example
dev/api_tests/admin_api/: parking_sites.http  parking_spots.http  sources.http
dev/api_tests/public_api/: datex2.http  park_api_v1.http  park_api_v2.http  parking-sites.http  parking-spots.http
dev/api_tests/server_api/: generic-parking-sites.http
dev/test_services/mocked_loki/: app.py
migrations/: alembic.ini  env.py
migrations/versions/: 2023-10-10-17-35-22_e4d1d4ee8646_init.py  2023-10-25-12-33-52_687daced5384_init.py  2023-12-09-09-12-50_a951c44669b8_split_source_status.py  2023-12-11-09-26-47_ccd3da2086d3_max_height.py  2024-03-12-18-26-42_6be2c2aa3637_more_fields_biking_support.py  2024-03-18-11-59-44_2dd84bdad484_longer_fee_description.py  2024-03-22-18-26-42_6be2c2aa3637_more_fields_biking_support.py  2024-04-07-08-30-20_c4f85305ddee_add_indices.py  2024-05-14-06-46-51_9ad8cd0f3b0d_photo_url_duplicate_id.py  2024-05-14-06-46-51_9ad8cd0f3b0d_photo_url_duplicate_id_new_types_tags.py  2024-07-28-11-38-03_0c34a8561ddb_parking_site_history.py  2024-08-15-18-09-45_5b614ce372e0_parking_site_group.py  2024-08-23-10-50-44_3e92c13d297e_max_width.py  2024-09-22-16-53-00_95992608c5d1_remove_generic_bike.py  2024-11-20-09-06-51_4f09ed999210_allow_realtime_opening_status_null.py  2025-03-26-18-46-08_8d2bcc119ee8_parking_spots.py  2025-05-08-18-26-35_82368571c72c_add_parking_spot_attributes.py  2025-05-18-11-45-14_db3ef5b7669d_more_parking_spot_properties.py  2025-07-27-14-17-51_314b11ae0e1c_extend_data_model.py  2025-08-11-18-38-44_46b6f06f010d_add_type_index.py  2025-10-20-17-47-21_b88bc9bb7b4d_restriction_capacities.py  2026-06-11-08-00-00_79f193ac7f86_official_region_code.py  2026-06-13-12-00-00_7c2e1f4a9b3d_linear_parking_position.py
push-client/: README.md  push-client.py
scripts/: README.md  _constants.py  _helper.py  apply-duplicates.py  get-new-duplicates.py  import-regionalschluessel.sh  push-client.py  reset-duplicates.py
tests/: ci_testing_config.yml
tests/integration/: conftest.py  helpers.py
tests/integration/admin_rest_api/: conftest.py  helpers.py  parking_sites_test.py  parking_spots_test.py  sources_test.py
tests/integration/models/: parking_site_test.py
tests/integration/public_rest_api/: conftest.py
tests/model_generator/: parking_restriction.py  parking_site.py  parking_spot.py  source.py
tests/request_input/admin_rest_api/: parking-site-item-with-legacy-fields.json  parking-site-item-with-relations.json  parking-site-item-with-restricted-to.json  parking-site-item.json  parking-site-list-with-legacy-fields.json  (+5 more)
webapp/: __init__.py  app.py  dependencies.py  entry_point_celery.py  entry_point_gunicorn.py  event_receiver.py  extensions.py
webapp/admin_rest_api/: __init__.py  admin_rest_api.py  base_blueprint.py  base_handler.py  base_method_view.py
webapp/cli/: __init__.py  main.py  parking_site.py  source.py
webapp/common/: blueprint.py  dataclass.py  flask_app.py  logger.py  remote_helper.py  unset_parameter.py
webapp/models/: __init__.py  base.py  external_identifier.py  parking_restriction.py  parking_site.py  parking_site_group.py  parking_site_history.py  parking_spot.py  source.py  tag.py
webapp/prometheus_api/: __init__.py  prometheus_handler.py  prometheus_models.py  prometheus_rest_api.py
webapp/public_rest_api/: __init__.py  base_blueprint.py  base_handler.py  base_method_view.py  public_rest_api.py
webapp/repositories/: __init__.py  base_repository.py  exceptions.py  official_region_code_repository.py  parking_site_group_repository.py  parking_site_history_repository.py  parking_site_repository.py  parking_spot_repository.py  source_repository.py
webapp/services/: base_service.py  sqlalchemy_service.py
webapp/status_rest_api/: __init__.py  status_rest_api.py
(+177 files in other folders)
