[project]
name = "park-api"
version = "1.0.0"
description = "ParkAPI v3 collects and provides parking data for cars and bikes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask~=3.1.3",
    "Flask-Failsafe~=0.2",
    "Flask-Migrate~=4.1.0",
    "Flask-SQLAlchemy~=3.1.1",
    "SQLAlchemy~=2.0.51",
    "SQLAlchemy-Utc~=0.14.0",
    "structlog~=26.1.0",
    "psycopg2-binary~=2.9.12",
    "pymysql~=1.2.0",
    "requests~=2.34.2",
    "alembic~=1.18.4",
    "gunicorn~=26.0.0",
    "pyyaml~=6.0.3",
    "celery~=5.6.3",
    "werkzeug~=3.1.8",
    "validataclass~=0.13.0",
    "python-dotenv~=1.2.2",
    "click~=8.4.2",
    "openpyxl~=3.1.5",
    "opening-hours-py~=2.0.2",
    "kombu~=5.6.2",
    "lxml~=6.1.1",
    "parkapi-sources~=0.37.0",
    "isodate~=0.7.2",
    "shapely~=2.1.2",
    "urllib3~=2.7.0",
    "validataclass-search-queries~=0.6.1",
    "flask-openapi~=2.3.3",
]

[dependency-groups]
dev = [
    "pytest~=9.1.1",
    "pytest-cov~=7.1.0",
    "ruff~=0.15.18",
    "freezegun~=1.5.5",
    "openapi-core~=0.23.1",
]

[tool.uv]
# This is an application, not a distributable package, so there is nothing to build/install for the project itself.
package = false

# binary butterfly shared libraries package registry (replaces the former --extra-index-url).
[[tool.uv.index]]
name = "binary-butterfly"
url = "https://git.binary-butterfly.de/api/v4/groups/262/-/packages/pypi/simple"
explicit = true

# Pin flask-openapi to the binary-butterfly index to avoid dependency confusion (an unrelated
# package of the same name exists on PyPI). validataclass-search-queries is published on PyPI.
[tool.uv.sources]
flask-openapi = { index = "binary-butterfly" }

# To test a ParkAPI Sources version which is not yet released, you can install directly from Github, e.g.:
# parkapi-sources = { git = "https://github.com/ParkenDD/parkapi-sources-v3.git", branch = "your-feature-branch" }


[tool.pytest.ini_options]
minversion = 6.0
addopts = """
    -ra
    --import-mode=importlib
"""

python_files = [
    "test_*.py",
    "*_test.py",
    "*Test.py"
]

python_classes = ["*Test"]

testpaths = [
    "tests/unit",
    "tests/integration"
]

# Ignore DeprecationWarnings in external libraries (because we can't do anything about them)
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:dns.*",
    "ignore::DeprecationWarning:kombu.*",
    "ignore::DeprecationWarning:.*blinker.*",
    "ignore::DeprecationWarning:.*pyparsing.*",
    "ignore::DeprecationWarning:.*celery.*",
    "ignore::DeprecationWarning:.*flask.testing",
    "ignore::DeprecationWarning:.*werkzeug.urls.*",
]


[tool.ruff]

lint.select = [
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "ASYNC", # flake8-async
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "INP", # flake8-no-pep420 (missing __init__.py)
    "PIE", # flake8-pie
    "T20", # flake8-print
    "Q", # flake8-quotes
    "TID", # flake8-tidy-imports
    "FLY", # flynt (use f-string instead of static join)
]

# Enable preview rules since a lot of basic pycodestyle rules are in preview mode for some reason
preview = true

lint.ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "ISC001", # single-line-implicit-string-concatenation - conflicts with formatter
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "dev/*"
]

line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = [
    # Allow assert
    "S101",
    # Ignore unsafe practices like hardcoded passwords
    "S101", "S105", "S106",
    # Don't require __init__.py files
    "INP",
]
"migrations/*" = [
    # Don't require __init__.py files
    "INP",
]
"scripts/*" = [
    # Don't require __init__.py files
    "INP001",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"


[tool.ruff.format]
quote-style = "single"
